--- a/1.ECMAScript 6簡介/package.json
+++ b/1.ECMAScript 6簡介/package.json
@@ -9,7 +9,9 @@
   "author": "Galileo Finch",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1"
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0"
   }
 }
