--- a/2.letAndConst/package.json
+++ b/2.letAndConst/package.json
@@ -9,6 +9,8 @@
   "author": "Galileo Finch",
   "license": "ISC",
   "devDependencies": {
-    "@babel/node": "^7.2.2"
+    "@babel/core": "^7.2.2",
+    "@babel/node": "^7.2.2",
+    "@babel/register": "^7.0.0"
   }
 }
